Add aria-label to stopwatch time.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="stopwatch row">
-            <div class="col sw-time">00:00:00.000</div>
+            <div class="col sw-time" aria-label="Stopwatch Time">00:00:00.000</div>
             <div class="col btn-group" role="group" aria-label="Stopwatch Controls">
                 <button type="button" class="btn btn-lg btn-primary sw-start" title="Start Stopwatch">
                     <i class="fa fa-play" aria-hidden="true"></i>
